--- a/sensing.ipynb
+++ b/sensing.ipynb
@@ -1249,7 +1249,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sionna",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
