正在添加多普勒

--- a/sensing_new.ipynb
+++ b/sensing_new.ipynb
@@ -51,13 +51,330 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sensing.scene import SensingScene\n",
     "from sensing.target import SensingTarget as tg\n",
-    "tg1 = tg()"
+    "tg1 = tg('human1','itu_wood')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scene = SensingScene(\"./Indoor/indoor.xml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[PLYMesh[\n",
+       "   name = \"ceiling-itu_ceiling_board.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [-3, -5, 3.5],\n",
+       "     max = [3, 5, 3.5]\n",
+       "   ],\n",
+       "   vertex_count = 4,\n",
+       "   vertices = [80 B of vertex data],\n",
+       "   face_count = 2,\n",
+       "   faces = [24 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"door-itu_plywood.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [1.56861, 4.04366, -0.00357819],\n",
+       "     max = [3.04818, 4.51779, 3.14076]\n",
+       "   ],\n",
+       "   vertex_count = 14,\n",
+       "   vertices = [280 B of vertex data],\n",
+       "   face_count = 12,\n",
+       "   faces = [144 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"floor-itu_floorboard.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [-3, -5, 0],\n",
+       "     max = [3, 5, 0]\n",
+       "   ],\n",
+       "   vertex_count = 4,\n",
+       "   vertices = [80 B of vertex data],\n",
+       "   face_count = 2,\n",
+       "   faces = [24 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"table1-itu_plywood.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [-1.07471, -1.95782, 1.20652],\n",
+       "     max = [0.925293, 1.95782, 1.31491]\n",
+       "   ],\n",
+       "   vertex_count = 14,\n",
+       "   vertices = [280 B of vertex data],\n",
+       "   face_count = 12,\n",
+       "   faces = [144 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"table2-itu_plywood.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [0.656094, -1.66954, -0.0107086],\n",
+       "     max = [0.756094, -1.56954, 1.21744]\n",
+       "   ],\n",
+       "   vertex_count = 14,\n",
+       "   vertices = [280 B of vertex data],\n",
+       "   face_count = 12,\n",
+       "   faces = [144 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"table3-itu_plywood.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [-0.911111, -1.66954, -0.0107086],\n",
+       "     max = [-0.811111, -1.56954, 1.21744]\n",
+       "   ],\n",
+       "   vertex_count = 14,\n",
+       "   vertices = [280 B of vertex data],\n",
+       "   face_count = 12,\n",
+       "   faces = [144 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"table4-itu_plywood.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [-0.911111, 1.49438, -0.0107086],\n",
+       "     max = [-0.811111, 1.59438, 1.21744]\n",
+       "   ],\n",
+       "   vertex_count = 14,\n",
+       "   vertices = [280 B of vertex data],\n",
+       "   face_count = 12,\n",
+       "   faces = [144 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"table5-itu_plywood.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [0.707869, 1.49438, -0.0107086],\n",
+       "     max = [0.807869, 1.59438, 1.21744]\n",
+       "   ],\n",
+       "   vertex_count = 14,\n",
+       "   vertices = [280 B of vertex data],\n",
+       "   face_count = 12,\n",
+       "   faces = [144 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"wall1-itu_concrete.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [-3, -5, 0],\n",
+       "     max = [-3, 5, 3.5]\n",
+       "   ],\n",
+       "   vertex_count = 4,\n",
+       "   vertices = [80 B of vertex data],\n",
+       "   face_count = 2,\n",
+       "   faces = [24 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"wall2-itu_concrete.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [3, -5, 0],\n",
+       "     max = [3, 5, 3.5]\n",
+       "   ],\n",
+       "   vertex_count = 4,\n",
+       "   vertices = [80 B of vertex data],\n",
+       "   face_count = 2,\n",
+       "   faces = [24 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"wall3-itu_concrete.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [-3, -5, 0],\n",
+       "     max = [3, -5, 3.5]\n",
+       "   ],\n",
+       "   vertex_count = 4,\n",
+       "   vertices = [80 B of vertex data],\n",
+       "   face_count = 2,\n",
+       "   faces = [24 B of face data],\n",
+       "   face_normals = 1\n",
+       " ],\n",
+       " PLYMesh[\n",
+       "   name = \"wall4-itu_concrete.ply\",\n",
+       "   bbox = BoundingBox3f[\n",
+       "     min = [-3, 5, 0],\n",
+       "     max = [3, 5, 3.5]\n",
+       "   ],\n",
+       "   vertex_count = 4,\n",
+       "   vertices = [80 B of vertex data],\n",
+       "   face_count = 2,\n",
+       "   faces = [24 B of face data],\n",
+       "   face_normals = 1\n",
+       " ]]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scene.scene.mi_scene.shapes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tx_positions = np.array([[0,0,2.95],[0,-4.99,2.95]])\n",
+    "tx_look_dir = np.array([[0,0,0],[0,0,0]])\n",
+    "scene.set_tx(tx_positions,tx_look_dir)\n",
+    "map_center = [0,0,0.65]\n",
+    "map_size_x = 6\n",
+    "map_size_y = 10\n",
+    "cell_size = 0.1\n",
+    "cell_positions = scene.set_cell_positions(map_center,map_size_x,map_size_y,cell_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paths = scene.compute_paths(max_depth=4,num_samples=1000000,max_rx_each_turn=1000,scattering=False,diffraction=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(4, 1000, 2, 139), dtype=int32, numpy=\n",
+       "array([[[[-1,  3,  2, ...,  9, -1, -1],\n",
+       "         [-1,  8, 10, ..., -1, -1, -1]],\n",
+       "\n",
+       "        [[-1,  3,  3, ...,  9, -1, -1],\n",
+       "         [-1, 11,  8, ..., -1, -1, -1]],\n",
+       "\n",
+       "        [[-1,  3,  3, ...,  9, -1, -1],\n",
+       "         [-1, 11,  8, ..., -1, -1, -1]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[-1,  3,  3, ...,  9, 12, -1],\n",
+       "         [-1,  2,  9, ..., 30,  9, -1]],\n",
+       "\n",
+       "        [[-1,  3,  3, ...,  9, 12, -1],\n",
+       "         [-1,  2,  9, ..., 30,  9, -1]],\n",
+       "\n",
+       "        [[-1,  3,  3, ...,  9, 12, -1],\n",
+       "         [-1,  2,  8, ..., 30,  9, -1]]],\n",
+       "\n",
+       "\n",
+       "       [[[-1,  0,  9, ..., -1, -1, -1],\n",
+       "         [-1,  9, 11, ..., -1, -1, -1]],\n",
+       "\n",
+       "        [[-1,  0,  0, ..., -1, -1, -1],\n",
+       "         [-1,  2,  9, ..., -1, -1, -1]],\n",
+       "\n",
+       "        [[-1,  0,  0, ..., -1, -1, -1],\n",
+       "         [-1,  2,  9, ..., -1, -1, -1]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[-1,  0,  0, ..., -1, -1, -1],\n",
+       "         [-1,  9,  2, ..., -1, -1, -1]],\n",
+       "\n",
+       "        [[-1,  0,  0, ..., -1, -1, -1],\n",
+       "         [-1,  9,  2, ..., -1, -1, -1]],\n",
+       "\n",
+       "        [[-1,  0,  0, ..., -1, -1, -1],\n",
+       "         [-1,  9,  2, ..., -1, -1, -1]]],\n",
+       "\n",
+       "\n",
+       "       [[[-1,  2,  0, ..., -1, -1, -1],\n",
+       "         [-1,  2,  2, ..., -1, -1, -1]],\n",
+       "\n",
+       "        [[-1,  2, 10, ..., -1, -1, -1],\n",
+       "         [-1, 10,  2, ..., -1, -1, -1]],\n",
+       "\n",
+       "        [[-1,  2, 10, ..., -1, -1, -1],\n",
+       "         [-1, 10,  2, ..., -1, -1, -1]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[-1,  2,  8, ..., -1, -1, -1],\n",
+       "         [-1,  0, 11, ..., -1, -1, -1]],\n",
+       "\n",
+       "        [[-1,  2,  8, ..., -1, -1, -1],\n",
+       "         [-1,  0, 11, ..., -1, -1, -1]],\n",
+       "\n",
+       "        [[-1,  2,  8, ..., -1, -1, -1],\n",
+       "         [-1,  0, 11, ..., -1, -1, -1]]],\n",
+       "\n",
+       "\n",
+       "       [[[-1, -1, -1, ..., -1, -1, -1],\n",
+       "         [-1, -1, -1, ..., -1, -1, -1]],\n",
+       "\n",
+       "        [[-1, -1, -1, ..., -1, -1, -1],\n",
+       "         [-1, -1, -1, ..., -1, -1, -1]],\n",
+       "\n",
+       "        [[-1, -1, -1, ..., -1, -1, -1],\n",
+       "         [-1, -1, -1, ..., -1, -1, -1]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[-1, -1, -1, ..., -1, -1, -1],\n",
+       "         [-1, -1, -1, ..., -1, -1, -1]],\n",
+       "\n",
+       "        [[-1, -1, -1, ..., -1, -1, -1],\n",
+       "         [-1, -1, -1, ..., -1, -1, -1]],\n",
+       "\n",
+       "        [[-1, -1, -1, ..., -1, -1, -1],\n",
+       "         [-1, -1, -1, ..., -1, -1, -1]]]], dtype=int32)>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "paths[0].objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_prims=0\n",
+    "primitives_2_objects = []\n",
+    "prim_offsets = []\n",
+    "mi_scene = scene.scene.mi_scene\n",
+    "for i,s in enumerate(mi_scene.shapes()):\n",
+    "    if not isinstance(s, mi.Mesh):\n",
+    "        raise ValueError('Only triangle meshes are supported')\n",
+    "    prim_offsets.append(n_prims)\n",
+    "    n_prims += s.face_count()\n",
+    "    primitives_2_objects += [i]*s.face_count()"
    ]
   }
  ],
