--- a/sensing_target.ipynb
+++ b/sensing_target.ipynb
@@ -98,16 +98,7 @@
    "outputs": [],
    "source": [
     "scene.target_names = [\"door\"]\n",
-    "scene.target_velocities = [[1.,1.,0.]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "paths = scene.compute_paths()"
+    "scene.target_velocities = [(1.,1.,0.)]"
    ]
   },
   {
@@ -116,7 +107,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "paths,obj=scene.compute_paths_sensing(paths, return_obj_names=True)"
+    "paths = scene.compute_paths(max_depth=4,diffraction=True,scattering=True,edge_diffraction=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v,obj=scene.compute_target_velocities(paths, return_obj_names=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subcarrier_spacing = 15e3\n",
+    "num_time_steps = 14\n",
+    "paths.apply_doppler(sampling_frequency=subcarrier_spacing, num_time_steps=num_time_steps)"
    ]
   }
  ],
