--- a/sensing_target.ipynb
+++ b/sensing_target.ipynb
@@ -127,7 +127,7 @@
    "source": [
     "subcarrier_spacing = 15e3\n",
     "num_time_steps = 14\n",
-    "paths.apply_doppler(sampling_frequency=subcarrier_spacing, num_time_steps=num_time_steps)"
+    "paths.apply_doppler(sampling_frequency=subcarrier_spacing, num_time_steps=num_time_steps,target_velocities=v)"
    ]
   }
  ],
